--- a/common/components/play-bar/play-bar.wxml
+++ b/common/components/play-bar/play-bar.wxml
@@ -2,7 +2,7 @@
 <view class="play-bar-container play-bar-class" style="height:{{height}}rpx;">
   <!--音乐封面-->
   <view class="cover-container" style="width:{{height+10}}rpx;height:{{height+10}}rpx;border-radius:{{height+10}}rpx;border-color:{{themeColor}}">
-    <image mode="aspectFill" src="{{cover}}" lazy-load style="width:{{height-21}}rpx;height:{{height-21}}rpx;border-radius:{{height-21}}rpx;border: 1px solid #999;"></image>
+    <circular-item src="{{cover}}" size="{{height-21}}" circular-item-class="cover-item" themeColor="{{themeColor}}"/>
   </view>
   <!--歌曲名与歌手-->
   <view class="song-info-container">
