--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -1,2 +1,48 @@
-<!--pages/profile/profile.wxml-->
-<view>我的</view>
+<view class="profile-container theme-bg">
+  <!--顶部设置按钮-->
+  <view class="theme-padding profile-top-bar" style="background-color:rgb({{themeBgAndModuleColorBasicParam}},{{themeBgAndModuleColorBasicParam}},{{themeBgAndModuleColorBasicParam}},{{topBarColorOpacity}})">
+    <top-bar>
+      <view slot="left" class="setting-icon">
+        <i-icon type="other" size="33" />
+      </view>
+      <view slot="middle" class="show-top-info-container flex-row" style="opacity:{{thumbAvatorOpacity}}">
+        <!-- <image mode="aspectFill" src="{{userAvatar}}"></image>-->
+        <view class="show-top-image">
+          <circular-item src="{{userAvatar}}" size="60"/>
+        </view>
+        <text>{{userId}}</text>
+      </view>
+    </top-bar>
+  </view>
+  <!--可竖向滚动内容区-->
+  <scroll-view scroll-y="true" upper-threshold="0" enhanced fast-deceleration bindscroll="scrolling" bindscrolltoupper="scrolltoupper" style="height: 914rpx;">
+    <!--个人基本信息显示-->
+    <view>
+      <top-bar>
+        <view slot="left" class="" style="height:1000px">
+          <circular-item src="{{src}}" size="100"/>
+        </view>
+        <view slot="middle" class="base-info-container">
+          <text></text>
+          <view></view>
+        </view>
+        <view slot="right" class="">
+          <i-icon></i-icon>
+        </view>
+      </top-bar>
+    </view>
+    <!--图标导航功能-->
+    <!--喜欢，下载，最近，评论，会员-->
+    <view></view>
+    <!--最近播放过的歌单-->
+    <view></view>
+    <!--自创歌单-->
+    <view></view>
+    <!--收藏歌单-->
+    <view></view>
+  </scroll-view>
+  <!--底部播放条-->
+  <view style="background-color: rgba(253,253,253,1);">
+    <play-bar height="108" play-bar-class="theme-padding" themeColor="{{themeColor}}" cover="https://ossweb-img.qq.com/images/lol/web201310/skin/big84000.jpg" />
+  </view>
+</view>
