--- a/pages/components/index-top-bar/index-top-bar.wxml
+++ b/pages/components/index-top-bar/index-top-bar.wxml
@@ -1,6 +1,6 @@
 <view>
   <top-bar>
-    <view slot="left" style="margin-left:-12rpx;">
+    <view slot="left" class="setting-icon">
       <i-icon type="other" size="33"/>
     </view>
     <view slot="middle">
