--- a/app.wxss
+++ b/app.wxss
@@ -6,6 +6,9 @@ page{
   --theme-bg:rgba(253, 253, 253, 0.418);
   --theme-module-color:rgba(253,253,253,1);
   --theme-color: rgb(255,181,185);
+
+  height: 100vh;
+  overflow: hidden;
 }
 /**主题**/
 .theme-color{
@@ -61,3 +64,10 @@ scroll-view{
   -webkit-overflow-scrolling: touch
 }
 
+
+/**文字超出一行显示省略号**/
+.one-row-flow {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
