--- a/common/components/search-bar/search-bar.wxml
+++ b/common/components/search-bar/search-bar.wxml
@@ -1,5 +1,5 @@
 <!--搜索框-->
 <view class="search-container">
-  <i-icon type="search" size="17" color="#ccc"/>
+  <i-icon type="search" size="20" color="#888"/>
   <text class="theme-font text-one-row">干饭人之歌</text>
 </view>
