--- a/common/components/tab-card/tab-card.wxml
+++ b/common/components/tab-card/tab-card.wxml
@@ -3,7 +3,7 @@
   <!--选项条-->
   <tab-bar tabTitles="{{tabTitles}}" tab-bar-class="tab-bar-container" currentTabId="{{currentTabId}}" bindclicktabitem="clickTabItem" class="fixed-element"/>
   <!--可竖向滚动内容区-->
-  <scroll-view scroll-y style="height:{{contentHeight - tabbarHeight}}px">
+  <scroll-view scroll-y style="height:{{contentHeight - tabbarHeight}}px" bindscrolltolower="scrollToLower" lower-threshold="10">
     <view wx:for="{{tabTitles}}" wx:key="title" wx:if="{{index==currentTabId}}">
       <slot name="{{'tab' + index}}"></slot>
     </view>
