对一些组件做了封装调整
对一些组件做了封装调整

--- a/app.wxss
+++ b/app.wxss
@@ -7,6 +7,7 @@ page{
   --theme-module-color:rgba(253,253,253,1);
   --theme-color: rgb(255,181,185);
   --theme-margin: 0 28rpx;
+  --theme-padding: 0 28rpx;
 
   height: 100vh;
   overflow: hidden;
@@ -31,7 +32,7 @@ page{
   letter-spacing: 1px;
 }
 .theme-padding{
-  padding: 0 28rpx;
+  padding: var(--theme-padding);
 }
 .theme-margin{
   margin: var(--theme-margin);
