--- a/common/components/song-list-item/song-list-item.wxml
+++ b/common/components/song-list-item/song-list-item.wxml
@@ -1,10 +1,10 @@
 <view>
-  <top-bar>
+  <three-column-bar>
     <square-item slot="left" size="140" src="https://ossweb-img.qq.com/images/lol/web201310/skin/big84000.jpg" />
     <view slot="middle" class="song-list-item-info">
       <text class="song-list-item-name one-row-flow">茯苓最近听的歌单</text>
       <text class="song-list-item-count">10首</text>
     </view>
     <i-icon slot="right" type="switch" size="21" wx:if="{{isActionIcon}}" />
-  </top-bar>
+  </three-column-bar>
 </view>
