--- a/pages/components/song-list-card/song-list-card.wxml
+++ b/pages/components/song-list-card/song-list-card.wxml
@@ -1,7 +1,7 @@
 <view>
   <!--歌单顶部标题-->
   <view class="song-list-title">
-    <top-bar>
+    <three-column-bar>
       <text slot="left">最近播放歌单(15个)</text>
       <view slot="right" class="title-action-container">
         <view class="add-button" wx:if="{{showAddButton}}">
@@ -9,18 +9,10 @@
         </view>
         <i-icon type="switch" size="21" />
       </view>
-    </top-bar>
+    </three-column-bar>
   </view>
   <!--歌单列表-->
   <view class="song-list-item" wx:for="{{[1,2,3]}}">
-    <!-- <top-bar>
-      <square-item slot="left" size="140" src="https://ossweb-img.qq.com/images/lol/web201310/skin/big84000.jpg" />
-      <view slot="middle" class="song-list-item-info">
-        <text class="song-list-item-name one-row-flow">茯苓最近听的歌单</text>
-        <text class="song-list-item-count">10首</text>
-      </view>
-      <i-icon slot="right" type="switch" size="21" wx:if="{{isActionIcon}}" />
-    </top-bar> -->
     <song-list-item isActionIcon/>
   </view>
 </view>
