--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,11 +1,13 @@
 <!--pages/index/index.wxml-->
-<view class="theme-bg index-container">
-  <!--顶部固定搜索条-->
-  <view class="theme-padding index-top-bar-container theme-module-color fixed-element" style="padding-top:{{topNavMargin}}px">
-    <index-top-bar />
+<wrapper nav-bar-class="theme-module-color">
+  <view slot="nav-bar-left" class="setting-icon">
+    <i-icon type="other" size="33" />
+  </view>
+  <view slot="nav-bar-middle">
+    <search-bar />
   </view>
   <!--可竖向滚动内容区-->
-  <scroll-view scroll-y="true" style="height: {{scrollHeight}}px;">
+  <scroll-view scroll-y="true" style="height: 100%;" slot="content">
     <!--轮播-->
     <view class="theme-module-color">
       <card-swiper swiper-item-class="theme-radius theme-load-slot" indicatorColor="#fadbd9" indicatorActiveColor="{{themeColor}}" />
@@ -38,7 +40,7 @@
     <view class="theme-module-color theme-module-margin">
       <card card-title-class="theme-padding" cardTitle="歌曲推荐">
         <view wx:for="{{[1,2,3]}}" class="flex-col music-cards-container {{index==0?'theme-margin-left':''}} {{index==2?'song-recommend-last-card-margin':''}} theme-margin-right">
-          <music-card wx:for="{{[1,2,3]}}" size="120"/>
+          <music-card wx:for="{{[1,2,3]}}" size="120" />
         </view>
       </card>
     </view>
@@ -62,13 +64,9 @@
     <view class="theme-module-color theme-module-margin">
       <card card-title-class="theme-padding" cardTitle="场景">
         <view wx:for="{{[1,2,3,4,5]}}" class="circular-card-item {{index==0?'theme-margin-left':''}} {{index==4?'theme-margin-right':''}} circular-card-margin-right">
-          <circular-card-item size="170" cover="https://ossweb-img.qq.com/images/lol/web201310/skin/big84000.jpg" message="运动"/>
+          <circular-card-item size="170" cover="https://ossweb-img.qq.com/images/lol/web201310/skin/big84000.jpg" message="运动" />
         </view>
       </card>
     </view>
   </scroll-view>
-  <!--底部播放条-->
-  <view style="background-color: rgba(253,253,253,1);" class="fixed-element">
-    <play-bar height="108" play-bar-class="theme-padding" cover="https://ossweb-img.qq.com/images/lol/web201310/skin/big84000.jpg" />
-  </view>
-</view>
+</wrapper>
