--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -1,28 +1,23 @@
-<view class="profile-container">
-  <!--顶部设置按钮-->
-  <view class="theme-padding profile-top-bar fixed-element {{topBarchange?'theme-module-color':'theme-bg'}}" style="padding-top:{{topNavMargin}}px;">
-    <top-bar>
-      <view slot="left" class="setting-icon">
-        <i-icon type="other" size="33" />
-      </view>
-      <view slot="middle" class="show-top-info-container flex-row {{topBarchange?'show-thumb-avator':'not-show-thumb-avator'}}">
-        <view class="show-top-image">
-          <circular-item src="{{userAvatar}}" size="60" />
-        </view>
-        <text class="one-row-flow">{{userId}}</text>
-      </view>
-    </top-bar>
+<wrapper nav-bar-class="profile-top-bar {{topBarchange?'theme-module-color':'theme-bg'}}">
+  <view slot="nav-bar-left" class="setting-icon">
+    <i-icon type="other" size="33" />
   </view>
-
+  <view slot="nav-bar-middle" class="show-top-info-container flex-row {{topBarchange?'show-thumb-avator':'not-show-thumb-avator'}}">
+    <view class="show-top-image">
+      <circular-item src="{{userAvatar}}" size="60" />
+    </view>
+    <text class="one-row-flow">{{userId}}</text>
+  </view>
   <!--隐形歌单导航条-->
-  <tab-bar tab-bar-class="fixed-song-list-nav-bar song-list-cp-nav-container theme-padding" bindclicktabitem="clickTabItem" currentTabId="{{currentSongListId}}" tabTitles="{{songListNav}}" wx:if="{{navBarIsTop}}" />
+<tab-bar tab-bar-class="fixed-song-list-nav-bar song-list-cp-nav-container theme-padding" bindclicktabitem="clickTabItem" currentTabId="{{currentSongListId}}" tabTitles="{{songListNav}}" wx:if="{{navBarIsTop}}" slot="other"/>
   <!--可竖向滚动内容区-->
-  <scroll-view scroll-y="true" upper-threshold="0" scroll-with-animation bindscroll="scrolling" bindscrolltoupper="scrolltoupper" style="height: {{scrollHeight}}px;" class="element-distance scroll-smooth theme-bg" scroll-top="{{scrollDiff}}" bindscrolltolower="scrolltolower">
+  <scroll-view scroll-y="true" upper-threshold="0" scroll-with-animation bindscroll="scrolling" bindscrolltoupper="scrolltoupper" style="height:100%" class="element-distance theme-bg" scroll-top="{{scrollDiff}}" bindscrolltolower="scrolltolower"
+    slot="content">
     <!--个人基本信息显示-->
     <view class="theme-padding" class="user-info-container theme-padding">
-      <top-bar>
+      <three-column-bar>
         <view slot="left" class="avator-icon">
-          <circular-item src="{{src}}" size="114" themeColor="{{themeColor}}" />
+          <circular-item src="{{src}}" size="114" />
         </view>
         <view slot="middle" class="base-info-container">
           <text class="user-name one-row-flow">茯苓170603</text>
@@ -31,7 +26,7 @@
         <view slot="right" class="">
           <i-icon type="enter" size="20" />
         </view>
-      </top-bar>
+      </three-column-bar>
     </view>
     <!--图标导航功能-->
     <!--喜欢，下载，最近，评论，会员-->
@@ -55,8 +50,4 @@
       <song-list-card />
     </view>
   </scroll-view>
-  <!--底部播放条-->
-  <view style="background-color: rgba(253,253,253,1);" class="fixed-element">
-    <play-bar height="108" play-bar-class="theme-padding" themeColor="{{themeColor}}" cover="https://ossweb-img.qq.com/images/lol/web201310/skin/big84000.jpg" />
-  </view>
-</view>
+</wrapper>
