--- a/subpackages-search/components/single-item/single-item.wxml
+++ b/subpackages-search/components/single-item/single-item.wxml
@@ -1,5 +1,5 @@
 <view>
-  <top-bar>
+  <three-column-bar>
     <view slot="left" class="single-item-info-container">
       <text class="song-name one-row-flow">化身孤岛的鲸</text>
       <text class="singer-name">不才</text>
@@ -7,5 +7,5 @@
     <view slot="right">
       <i-icon slot="right" type="switch" size="21" />
     </view>
-  </top-bar>
+  </three-column-bar>
 </view>
