--- a/subpackages-search/pages/search/search.wxml
+++ b/subpackages-search/pages/search/search.wxml
@@ -1,25 +1,19 @@
-<!--搜索歌曲页面-->
-<view class="search-container">
-  <!--顶部搜索框-->
-  <view class="theme-padding search-bar-container theme-module-color fixed-element" style="padding-top:{{topNavMargin}}px">
-    <top-bar>
-      <view slot="left" class="back-icon">
-        <i-icon type="return" size="25" color="#888"/>
-      </view>
-      <view slot="middle">
-        <search-bar />
-      </view>
-    </top-bar>
+<wrapper nav-bar-class="theme-module-color">
+  <view slot="nav-bar-left" class="back-icon">
+    <i-icon type="return" size="25" color="#888" />
+  </view>
+  <view slot="nav-bar-middle">
+    <search-bar />
   </view>
   <!--可滚动内容-->
-  <scroll-view scroll-y="true" style="height: {{scrollHeight}}px;" class="theme-module-color">
+  <scroll-view scroll-y="true" style="height: 100%" class="theme-module-color" slot="content">
     <!--历史搜索-->
     <view class="theme-margin history-container">
-      <search-label-scroll-bar title="历史" label="天竺鼠车车"/>
+      <search-label-scroll-bar title="历史" label="天竺鼠车车" />
     </view>
     <!--推荐索搜-->
     <view class="theme-margin recommend-search-container">
-      <search-label-scroll-bar title="推荐" label="good love your love"/>
+      <search-label-scroll-bar title="推荐" label="good love your love" />
     </view>
     <!--热门搜索-->
     <view class="theme-margin flex-col hot-search-container">
@@ -32,8 +26,4 @@
       </view>
     </view>
   </scroll-view>
-  <!--底部播放条-->
-  <view style="background-color: rgba(253,253,253,1);" class="fixed-element">
-    <play-bar height="108" play-bar-class="theme-padding" themeColor="{{themeColor}}" cover="https://ossweb-img.qq.com/images/lol/web201310/skin/big84000.jpg" />
-  </view>
-</view>
+</wrapper>
