歌单详情页面ui完成
歌单详情页面ui完成

--- a/common/components/song-list-item/song-list-item.wxss
+++ b/common/components/song-list-item/song-list-item.wxss
@@ -1,17 +1,24 @@
-.one-row-flow{
+.one-row-flow {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+}
+.song-list-three-column{
+  align-items: stretch;
 }
 .song-list-item-info {
   display: flex;
   flex-direction: column;
   margin-left: 24rpx;
+  height: 100%;
+  justify-content: space-around;
 }
-.song-list-item-name{
+
+.song-list-item-name {
   font-size: 31rpx;
 }
-.song-list-item-count{
+
+.song-list-item-count {
   color: #888;
   letter-spacing: 1px;
   font-size: 24rpx;
