--- a/subpackages-music/pages/music-play/music-play.wxss
+++ b/subpackages-music/pages/music-play/music-play.wxss
@@ -3,53 +3,101 @@
   margin-right: 20rpx;
   align-items: center;
 }
-.song-nane{
-  font-size: 34rpx!important;
+
+.song-nane {
+  font-size: 34rpx !important;
   font-weight: bold;
   letter-spacing: 1px;
-  background-color: var(--theme-module-color)!important;
+  background-color: var(--theme-module-color) !important;
 }
-.song-nane-container{
+
+.song-nane-container {
   width: 70%;
   margin: 0 auto;
   text-align: center;
 }
-.singer-name{
+
+.singer-name {
   font-size: 26rpx;
   color: #777;
   letter-spacing: 1px;
 }
-.content-container{
+
+.content-container {
   background-size: 100% 100%;
   background-repeat: no-repeat;
+  height:100%;
+  background-image: url('https://img-blog.csdnimg.cn/2021020500430562.png#pic_center');
 }
-.play-cd{
+.song-time{
+  text-align: center;
+  color: #999;
+  font-size: 22rpx;
+  letter-spacing: 1px;
+  margin-bottom: 16rpx;
+}
+.play-cd {
   justify-content: center;
-  padding-top: 150rpx;
+  position: relative;
 }
-.circular-play-cd{
-  box-shadow: 0px 0px 30px rgba(255,181,185,0.6);
+
+.circular-play-cd {
+  box-shadow: 0px 0px 20px rgba(255, 181, 185, 0.6);
 }
-.play-bar{
-  margin-top: 150rpx;
-}
-.play-mode-icon,.music-list-icon{
+
+
+.play-mode-icon, .music-list-icon {
   width: 70rpx;
-  height:70rpx;
+  height: 70rpx;
 }
-.play-bar-middle{
+
+.play-bar-middle {
   justify-content: space-evenly;
   align-items: center;
 }
-.pre-song-icon,.next-song-icon{
+
+.pre-song-icon, .next-song-icon {
   width: 130rpx;
   height: 130rpx;
 }
-.play-icon{
+
+.play-icon {
   width: 150rpx;
   height: 150rpx;
 }
+
+.bottom-action-bar,.play-bar {
+  position: fixed;
+  left: 0;
+  right: 0;
+}
+
 .bottom-action-bar{
-  margin-top: 20rpx;
-  
+  justify-content: space-between;
+}
+
+.bottom-action-bar image {
+  width: 75rpx;
+  height: 75rpx;
+}
+
+.comment-container {
+  position: relative;
+}
+
+.comment-count {
+  letter-spacing: 1px;
+  color: #777;
+  font-size: 20rpx;
+  position: absolute;
+  top: -10rpx;
+  right: -20rpx;
+}
+
+.circular-post {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -245rpx;
+  margin-top: -245rpx;
 }
